<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/books"
    android:padding="10dp"
    android:id="@+id/Linear1">

    <RelativeLayout
        android:id="@+id/TitleParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:text="Stewdy"
            android:textSize="80sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/bAbout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/Title"
            android:text="@string/about_button"
            android:layout_alignRight="@+id/Title"
            android:layout_marginRight="40dp"
            android:background="@null"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_label"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/login_button"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:src="@drawable/login" />

    <Button
        android:id="@+id/bBrowse"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/browse_button"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button" />
    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        >
        <TextView
            android:id="@+id/reg_ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not Registered?"
            />
        <Button
            android:id="@+id/bRegisterStudent"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/student_register_button"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/reg_ques"
            android:paddingRight="10sp"
            android:background="@null"
            />
        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text=" or "
            android:layout_toRightOf="@+id/bRegisterStudent"
            android:paddingRight="10sp"
            android:background="@null"
            android:gravity="center"
            android:layout_below="@+id/reg_ques"
            />
        <Button
            android:id="@+id/bRegisterTutor"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/tutor_register_button"
            android:layout_toRightOf="@+id/or_text"
            android:background="@null"
            android:layout_below="@+id/reg_ques"
            />

    </RelativeLayout>

</LinearLayout>